# checklist_project

./: .STARTUP_GUIDE.txt  .env.example  .gitignore  README.md  STRUCTURE.md  WELCOME.md  cli.py  pyproject.toml  setup.sh  test_integration_remote.py  test_remote.py
config/prompts/: classification.txt  evidence_extraction.txt
docs/: CHANGELOG_PHASE5.md  DOCUMENTATION_INDEX.md  PROJECT_STATUS.md  QUICKSTART_REMOTE.md  README.md  REMOTE_OLLAMA.md  START_HERE.md  TROUBLESHOOTING.md
src/: __init__.py
src/checklist_engine/: __init__.py  analyzer.py  models.py
src/llm_engine/: __init__.py  ollama_client.py  response_parser.py
src/pdf_processor/: __init__.py  extractor.py  models.py  parser.py
src/report_engine/: __init__.py  json_reporter.py  markdown_reporter.py
src/utils/: __init__.py  logger.py
tests/: demo.py  sample_paper.txt  test_imports.py  test_pdf_processor.py
